--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ fastjsonschema==2.16.2
 fonttools==4.38.0
 fqdn==1.5.1
 idna==3.4
+importlib-metadata==5.1.0
 ipykernel==6.19.2
 ipython==8.7.0
 ipython-genutils==0.2.0
@@ -82,6 +83,7 @@ qtconsole==5.4.0
 QtPy==2.3.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+seaborn==0.12.1
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.3.0
@@ -89,11 +91,14 @@ soupsieve==2.3.2.post1
 stack-data==0.6.2
 terminado==0.17.1
 tinycss2==1.2.1
+tomli==2.0.1
 tornado==6.2
 traitlets==5.6.0
+typing_extensions==4.4.0
 uri-template==1.2.0
 wcwidth==0.2.5
 webcolors==1.12
 webencodings==0.5.1
 websocket-client==1.4.2
 widgetsnbextension==4.0.4
+zipp==3.11.0
